# Computer_Graphics_Project

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.hpp  Shader.hpp  mat4.hpp
shaders/: basic.frag  basic.vert  envmap.frag  envmap.vert  phong.frag  post.frag  post.vert  simple.frag  simple.vert  textured.frag  textured.vert
src/: Camera.cpp  Shader.cpp  main.cpp  mat4.cpp
